# mlib

./: .gitignore  CMakeLists.txt
mxxlib_test/: CmakeLists.txt
mxxlib_test/type/: CmakeLists.txt  Enum.cc  Record.cc  Union.cc
mxxlib_test/type_trait/: CMakeLists.txt  class_trait.cc  enum_traits.cc  integral_trait.cc  m1.cc  m2.cc  test_ids_consistency.cc  trait_data.cc  trait_id.cc  trait_test_structs.hpp  typename.cc
type/: Enum.hpp  Optional.hpp  Record.hpp  Union.hpp
type_trait/: enum_helper_functions.hpp  id_gen.hpp  reflect.hpp  struct_tuple_size.hpp  trait.hpp  tuple_helper.hpp  tuple_pointer.hpp  type_name.hpp
